# qlever-docs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yml  generate-docs.yml
docs/: benchmarks.md  compliance.md  datasets.md  datetime.md  demo.md  demos.md  faq.md  geosparql.md  index.md  materialized-views.md  misc.md  path-search.md  publications.md  qlever-control.md  qleverfile.md  quickstart.md  rebuild-index.md  special-features.md  text-search.md  troubleshooting.md  update.md  use-cases.md
docs/blog/posts/: package-updates-2026-04.md
docs/css/: qlever-demo.css
docs/js/: qlever-demo.js
docs/qlever-control/: datasets.md  qleverfile.md
